--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/AppTheme"
-        android:name=".CFDApplication">
+        android:name=".MainApplication">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -85,6 +85,7 @@
             <intent-filter>
                 <!-- APPID需要替换为相应的个推应用ID -->
                 <action android:name="com.igexin.sdk.action.${GETUI_APP_ID}" />
+                <action android:name="com.igexin.sdk.action.${TD_APP_ID}" />
             </intent-filter>
         </receiver>
 
