--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native-smart-pull-to-refresh-listview": "1.0.17",
     "react-native-swiper": "1.5.2",
     "react-native-tabbar": "0.3.6",
-    "react-native-update": "3.0.1",
+    "react-native-update": "^3.0.2",
     "react-native-wheel-picker": "1.1.0",
     "react-native-wx": "^2.0.1",
     "react-timer-mixin": "0.13.3",
