--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-timer-mixin": "0.13.3",
     "@remobile/react-native-qrcode-local-image": "1.0.1",
     "react-native-view-shot": "1.5.1",
+    "crypto-js": "3.1.9-1",
     "realm": "^0.14.3"
   }
 }
