--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -196,11 +196,15 @@ dependencies {
     compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
 
-    // -------------------- 以下四个库是美洽依赖的 ----------------------------
-    compile 'com.meiqia:meiqiasdk:3.2.8@aar'
+    // -------------------- 以下三个库是必须依赖的 okhttp 必须 3.5.0 或者更高版本 ----------------------------
+    compile 'com.meiqia:meiqiasdk:3.3.9@aar'
     compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.squareup.okhttp3:okhttp:3.3.1'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+//    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    // -------------------- 以上三个库是必须依赖的 okhttp 必须 3.5.0 或者更高版本 ----------------------------
+//    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+//    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+//    compile 'org.xutils:xutils:3.3.36'
 
     // -------------------- 个推依赖 ------------
     compile fileTree(dir: 'libs', include: ['*.jar'])
