--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,10 +99,10 @@ android {
         applicationId "com.tradehero.cfd"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 26
-        versionName "1.2.8"
+        versionCode 28
+        versionName "1.3.0"
         ndk {
-            abiFilters "armeabi-v7a" //,"x86" //, "armeabi-v7a" not used //, "x86" //If you need to debug on x86 emulators, add x86 or x86_64 here.
+            abiFilters "armeabi-v7a"  //,"x86", "armeabi-v7a" not used //, "x86" //If you need to debug on x86 emulators, add x86 or x86_64 here.
         }
         manifestPlaceholders = [
             // 如果有多项，每一项之间需要用逗号分隔
