--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,7 +102,7 @@ android {
         versionCode 31
         versionName "1.3.3"
         ndk {
-            abiFilters "armeabi-v7a"  ,"x86"//, "armeabi-v7a" not used //, "x86" //If you need to debug on x86 emulators, add x86 or x86_64 here.
+            abiFilters "armeabi-v7a"  //,"x86"//, "armeabi-v7a" not used //, "x86" //If you need to debug on x86 emulators, add x86 or x86_64 here.
         }
         manifestPlaceholders = [
             // 如果有多项，每一项之间需要用逗号分隔
