--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-picker": "4.0.8",
     "react-native-smart-pull-to-refresh-listview": "^1.6.10",
     "react-native-swiper": "1.5.2",
+    "react-native-swipeout": "^2.3.3",
     "react-native-update": "^4.0.0",
     "react-native-view-shot": "1.5.1",
     "react-native-wheel-picker": "1.1.0",
